lib/components/fabro-llm/tests/it/wire/snapshots/it__wire__gemini__encode_tool_round_trip.snap
---
source: lib/components/fabro-llm/tests/it/wire/gemini.rs
expression: rendered
---
{
  "contents": [
    {
      "role": "user",
      "parts": [
        {
          "text": "Find foo and read /tmp/x"
        }
      ]
    },
    {
      "role": "model",
      "parts": [
        {
          "text": "Let me check."
        },
        {
          "functionCall": {
            "name": "search",
            "args": {
              "query": "foo"
            }
          }
        },
        {
          "functionCall": {
            "name": "read_file",
            "args": {
              "path": "/tmp/x"
            }
          }
        }
      ]
    },
    {
      "role": "user",
      "parts": [
        {
          "functionResponse": {
            "name": "search",
            "response": {
              "matches": 2
            }
          }
        }
      ]
    },
    {
      "role": "user",
      "parts": [
        {
          "functionResponse": {
            "name": "read_file",
            "response": {
              "result": "file not found"
            }
          }
        }
      ]
    }
  ],
  "generationConfig": {
    "maxOutputTokens": 128
  },
  "tools": [
    {
      "functionDeclarations": [
        {
          "name": "search",
          "description": "Search files",
          "parameters": {
            "type": "object",
            "properties": {
              "query": {
                "type": "string"
              }
            },
            "required": [
              "query"
            ]
          }
        },
        {
          "name": "read_file",
          "description": "Read a file by path",
          "parameters": {
            "type": "object",
            "properties": {
              "path": {
                "type": "string"
              }
            }
          }
        }
      ]
    }
  ],
  "safety_settings": [
    {
      "category": "HARM_CATEGORY_DANGEROUS_CONTENT",
      "threshold": "BLOCK_ONLY_HIGH"
    }
  ]
}
